Fix css on mobile

--- a/wedding/assets/css/main.css
+++ b/wedding/assets/css/main.css
@@ -140,15 +140,16 @@ em, i {
 p {
   margin: 0; }
 
-.focus-in-expand {
-  -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s both;
-  animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s both; }
-  .focus-in-expand.two {
-    -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.3s both;
-    animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.3s both; }
-  .focus-in-expand.three {
-    -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.1s both;
-    animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.1s both; }
+@media screen and (min-width: 480px) {
+  .focus-in-expand {
+    -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s both;
+    animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.5s both; }
+    .focus-in-expand.two {
+      -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.3s both;
+      animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.3s both; }
+    .focus-in-expand.three {
+      -webkit-animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.1s both;
+      animation: focus-in-expand 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.1s both; } }
 
 @-webkit-keyframes focus-in-expand {
   0% {
