--- a/wedding/assets/sass/base/_typography.scss
+++ b/wedding/assets/sass/base/_typography.scss
@@ -63,22 +63,27 @@
 	}
 
 	.focus-in-expand {
-		-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s both;
-		        animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s both;
 
-		        &.two {
+		@include breakpoint(medium-up) {
 
-		        	-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3.3s both;
-		        	animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3.3s both;
+			-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s both;
+	        animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s both;
 
-		        }
+	        &.two {
 
-		        &.three {
+	        	-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3.3s both;
+	        	animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3.3s both;
 
-		        	-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 4.1s both;
-		        	animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 4.1s both;
+	        }
 
-		        }
+	        &.three {
+
+	        	-webkit-animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 4.1s both;
+	        	animation: focus-in-expand 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 4.1s both;
+
+	        }
+
+	    }
 	}
 
 	@-webkit-keyframes focus-in-expand {
